--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "@mui/styles": "^6.4.4",
     "@reduxjs/toolkit": "^2.2.4",
     "framer-motion": "^12.4.3",
+    "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
